--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,27 @@
+beautifulsoup4==4.12.1
 bs4==0.0.1
-pandas==2.0.0
+cachetools==5.3.0
+certifi==2022.12.7
+charset-normalizer==3.1.0
+google-auth==2.17.2
+google-auth-oauthlib==1.0.0
+gspread==5.8.0
+httplib2==0.22.0
+idna==3.4
+markdown-it-py==2.2.0
+mdurl==0.1.2
+oauth2client==4.1.3
+oauthlib==3.2.2
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
 pydash==6.0.2
+Pygments==2.14.0
+pyparsing==3.0.9
 requests==2.28.2
+requests-oauthlib==1.3.1
 requests-toolbelt==0.10.1
 rich==13.3.3
+rsa==4.9
+six==1.16.0
+soupsieve==2.4
+urllib3==1.26.15
